--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Tag
+        run: git fetch --force --tags
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
