docs: :memo: 文档

--- a/doc/config.example.yaml
+++ b/doc/config.example.yaml
@@ -1,5 +1,6 @@
+
 # 是否显示进度
-print-progress: true
+print-progress: false
 
 # 并发线程数
 concurrent: 200
@@ -15,8 +16,8 @@ quality-level: 1
 
 # 测速地址(注意 并发数*节点速度<最大网速 否则测速结果不准确)
 # 尽量不要使用Speedtest，Cloudflare提供的下载链接，因为很多节点屏蔽测速网站
-# 建议使用自建测速地址
-speed-test-url: speed-test-url: https://speed.cloudflare.com/__down?bytes=52428800
+# 建议使用自己上传到Cloudflare R2的文件
+speed-test-url: https://github.com/AaronFeng753/Waifu2x-Extension-GUI/releases/download/v2.21.12/Waifu2x-Extension-GUI-v2.21.12-Portable.7z
 
 # 最低测速结果舍弃(KB/s)
 min-speed: 1024
@@ -62,3 +63,4 @@ sub-urls-retry: 3
 sub-urls:
   - https://example.com/sub.txt
   - https://example.com/sub2.txt
+
